# borderless

./: .gitignore  CMakeLists.txt  Makefile  README.md
results/: average_max_borderless.txt  average_min_period.txt  average_n_minus_max_borderless.txt  average_n_minus_min_period.txt
results/All algorithms/Text/: Alphabet_size_2.txt
results/Average difference/Between n and maximal unbordered factor/Text/: Alphabet_size_2_3_4_5.txt
results/Average difference/Between n and minimal period/Text/: Alphabet_size_2_3_4_5.txt
results/Basic and modified border array algortihms/Text/: Alphabet_size_10.txt  Alphabet_size_3.txt  Alphabet_size_4.txt
results/Comparison of algorithms/All algorithms/Text/: Alphabet_size_4.txt  Alphabet_size_5.txt
results/Comparison of algorithms/Basic and modified border array algorithms/Text/: Alphabet_size_2.txt  Alphabet_size_5.txt
results/algorithms_comparison/: comparison3.txt
src/: average.cpp  border.cpp  border.h  borderless.cpp  borderless.h  compare_algorithms.cpp  dbf.cpp  dbf.h  etc.h  measure.cpp  period.cpp  unbordered.cpp  unbordered.h
